Terraform_files/route.tf
resource "aws_route" "route-for-public" {
  route_table_id            = aws_route_table.public-route-table.id
  destination_cidr_block    = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.gw.id
}



resource "aws_route" "route-for-private" {
  route_table_id            = aws_route_table.private-route-table.id
  destination_cidr_block    = "0.0.0.0/0"
 gateway_id = aws_nat_gateway.nat-gateway.id
}
